# IsaacSocket-Utility

./: .editorconfig  .gitignore  IsaacSocket-Utility.sln  IsaacSocket.sln  README.md
IsaacSocket/: IsaacSocket.csproj  Main.cs  Program.cs
IsaacSocket-DLL/: .gitignore  .rgignore  CMakeLists.txt  IsaacSocket-DLL.vcxproj  IsaacSocket-DLL.vcxproj.filters  _isaac_socket.hpp  callback.hpp  dllmain.cpp  findinjects.sh  function.hpp  glad.cpp  gnucompat.hpp  gnuinject.S  handle.hpp  http2.cpp  inject.cpp  inject.hpp  isaac.hpp  isaac_api.hpp  isaac_socket.hpp  lua.hpp  main.hpp  memory.hpp  mingw-toolchain.cmake  module.hpp  opengl.hpp  pch.h  reload.cpp  reload.hpp  state.h  state.hpp  system_.hpp  utils.hpp  win_api.hpp
IsaacSocket-DLL/client/: client.cpp  old.txt
IsaacSocket-DLL/include/: async.hpp  callback.hpp  config.hpp  function.hpp  function_.hpp  gnucompat.hpp  handle.hpp  imsdk.hpp  inject.hpp  isaac.hpp  isaac_image.hpp  isaac_socket.hpp  lua.hpp  main.hpp  module.hpp  pch.h  reload.hpp  result.hpp  state.hpp  system_.hpp  task_.hpp  udata.hpp  utils.hpp
IsaacSocket-DLL/include/glad/: glad.h
IsaacSocket-DLL/include/modules/: _isaac_socket.hpp  http.hpp  imgui.hpp  isaac_.hpp  isaac_api.hpp  module.hpp  opengl.hpp  system_.hpp  win_api.hpp
IsaacSocket-DLL/include/stbi/: stb_image.h
IsaacSocket-DLL/lib/: libcrypto.lib
IsaacSocket-DLL/libs/: httplib.h
IsaacSocket-DLL/libs/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
IsaacSocket-DLL/libs/Poco/lib/: PocoEncodings.lib  PocoEncodingsmd.lib  PocoFoundation.lib  PocoJSON.lib  PocoJSONmd.lib  PocoNet.lib  PocoNetSSLWinmd.lib  PocoUtil.lib  PocoUtilmd.lib  PocoXML.lib  PocoXMLmd.lib
IsaacSocket-DLL/libs/UserSig/: GenerateTestUserSig.cpp  GenerateTestUserSig.h
IsaacSocket-DLL/libs/glad/: glad.cpp  glad.h  khrplatform.h
IsaacSocket-DLL/libs/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp  imgui_internal.h
IsaacSocket-DLL/libs/imsdk/: GenerateTestUserSig.cpp  GenerateTestUserSig.h  ImSDK.lib  TIMCloud.h  TIMCloudComm.h  TIMCloudDef.h  TIMCommunityManager.h  TIMConversationManager.h  TIMErrorCode.h  TIMExperimentalAPI.h  TIMFriendshipManager.h  TIMGroupManager.h  TIMManager.h  TIMMessageManager.h  TIMOfflinePushManager.h  TIMSignalingManager.h
IsaacSocket-DLL/libs/myhttp/: myhttp.cpp  myhttp.hpp  mythttp.cpp
IsaacSocket-DLL/libs/mytask/: mytask.cpp  mytask.hpp
IsaacSocket-DLL/libs/myws/: myws.cpp  myws.hpp
IsaacSocket-DLL/libs/stbi/: stb_image.h
IsaacSocket-DLL/src/: async.cpp  callback.cpp  config.cpp  dllmain.cpp  gnuinject.S  inject.cpp  isaac_socket.cpp  reload.cpp  result.cpp  state.cpp  task_.cpp
IsaacSocket-DLL/src/modules/: http.cpp  http2.cpp  image.cpp  imgui.cpp  imgui_.cpp  imsdk_.cpp  isaac_.cpp  isaac_api.cpp  memory.cpp  opengl.cpp  sound.cpp  system_.cpp  tim.cpp  web_socket.cpp  win_api.cpp
IsaacSocket-EXE/: IsaacSocket-EXE.vcxproj  IsaacSocket-EXE.vcxproj.filters
IsaacSocket-EXE/include/: pch.h  utils.hpp
IsaacSocket-EXE/res/: resource.h  resource.rc
IsaacSocket-EXE/src/: main.cpp  render.cpp
IsaacSocket-Utility/: IsaacSocket-Utility.vcxproj  IsaacSocket-Utility.vcxproj.filters  main.cpp
IsaacSocket-Utility/include/: render.hpp
IsaacSocket-Utility/src/: main.cpp  render.cpp
IsaacSocket/Common/: CallbackDelegate.cs  Channel.cs
IsaacSocket/Forms/: Form1.Designer.cs  Form1.cs  Form1.resx  UpdateForm.Designer.cs  UpdateForm.cs
IsaacSocket/Modules/: ClipboardModule.cs  HttpClientModule.cs  IProcessOperation.cs  IsaacAPIModule.cs  Module.cs  WebSocketClientModule.cs
IsaacSocket/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
IsaacSocket/Utils/: AssemblyCode.cs  MemoryUtil.cs  MiscUtil.cs  ProcessUtil.cs  (+1 more)
RepentogonLoader/: RepentogonLoader.vcxproj  dllmain.cpp
(+7 files in other folders)
